--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="col-xl-7 col-lg-7 col-12">
               <div class="section-name wow fadeInRight">Nuestras caracteristicas</div>
               <h3 class="text-capitalize devider-left wow fadeInLeft" data-wow-delay=".2s">¿Por que deberias elegirnos?</h3>
-              <p>Con mas de 30 años de experiencia de ser un negocio centrado en una clinica veterinaria, tenemos mucho ara ofrecer a nuestros clientes. Estas son algunas de las razones por las cuales deberias escogernos.</p>
+              <p>Con mas de 30 años de experiencia de ser un negocio centrado en una clinica veterinaria, tenemos mucho para ofrecer a nuestros clientes. Estas son algunas de las razones por las cuales deberias escogernos.</p>
               <div class="row row-15">
                 <div class="col-xl-6 wow fadeInUp" data-wow-delay=".2s">
                   <div class="box-default">
